--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -21,9 +21,6 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Terraform Install
-      uses: hashicorp/setup-terraform@v1
-
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform fmt
       id: fmt
@@ -53,10 +50,10 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-        const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
-        #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
-        #### Terraform Validation 🤖${{ steps.validate.outputs.stdout }}
-        #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
+        const output = `#### Terraform Format and Style \`${{ steps.fmt.outcome }}\`
+        #### Terraform Initialization \`${{ steps.init.outcome }}\`
+        #### Terraform Validation \`${{ steps.validate.outputs.stdout }}\`
+        #### Terraform Plan \`${{ steps.plan.outcome }}\`
       
       <details><summary>Show Plan</summary>
       
