--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,3 +46,12 @@ jobs:
         run: go test -v ./...
         env:
           IC_API_KEY: ${{ secrets.ACCESS_KEY }}
+          
+      - uses: 8398a7/action-slack@v2
+        with:
+          status: ${{ job.status }}
+          author_name: Integration Test # default: 8398a7@action-slack
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # optional
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+        if: always() # Pick up events even if the job fails or is canceled.
