--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,12 +5,12 @@ default_stages: [commit]
 # Terraform Fmt      : Used to rewrite Terraform configuration files to a canonical format and style.
 # Terraform Validate : Validates the configuration files in a directory, referring only to the configuration and not accessing any remote services such as remote state, provider APIs, etc
 repos:
-- repo: git://github.com/antonbabenko/pre-commit-terraform
-  rev: v1.52.0
+- repo: https://github.com/antonbabenko/pre-commit-terraform
+  rev: v1.64.0
   hooks:
     - id: terraform_fmt
-- repo: git://github.com/pre-commit/pre-commit-hooks
-  rev: v4.0.1
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.1.0
   hooks:
       - id: check-merge-conflict
       - id: trailing-whitespace
